--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -1,6 +1,7 @@
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fa fa-github"></i></a>
+    <a href="#"><i class="fa fa-gitlab"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
