--- a/source/shared/_navbar.html.erb
+++ b/source/shared/_navbar.html.erb
@@ -18,9 +18,9 @@
       <div class="dropdown">
         <%= image_tag 'https://kitt.lewagon.com/placeholder/users/TomaLeleux', class: "avatar dropdown-toggle", id: "navbar-wagon-menu", data:{ toggle: "dropdown"}%>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><% link_to 'Profile', '#' %></li>
-          <li><% link_to 'Dashboard', '#' %></li>
-          <li><% link_to 'Log Out', '#' %></li>
+          <li><%= link_to 'Profile', '#' %></li>
+          <li><%= link_to 'Dashboard', '#' %></li>
+          <li><%= link_to 'Log Out', '#' %></li>
         </ul>
       </div>
     </div>
