--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -22,7 +22,6 @@
   flex-wrap: wrap;
 }
 
-
 .card-user {
   position: absolute;
   right: 10px;
@@ -41,15 +40,16 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+  h2 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 14px;
+    opacity: 0.7;
+    font-weight: lighter;
+  }
 }
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
-}
+
 .card-link {
   position: absolute;
   top: 0;
@@ -59,7 +59,7 @@
   z-index: 2;
   background: black;
   opacity: 0;
-}
-.card-link:hover {
-  opacity: 0.1;
+  &hover {
+    opacity: 0.1;
+  }
 }
