--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $seaweed;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -37,12 +37,12 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
-  text-decoration: none;
+  color: $dark-liver !important;
+  font-size: 18px !important;
+  &hover {
+    color: #da552f;
+    text-decoration: none;
+  }
 }
 
 /* Dropdown menu */
@@ -54,8 +54,8 @@
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
-  font-size: 15px !important;
+  color: $dark-liver !important;
+  font-size: 18px !important;
   line-height: 22px !important;
   padding: 10px 20px;
 }
