--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,6 +1,6 @@
 <div id="about">
   <div class="about-content">
-    <h1>This template was built with <i class="fa fa-heart"></i> by</h1>
+    <h1>Teammates</h1>
     <ul class="list-inline">
       <% data.teams.each do |team| %>
         <li>
